src/objects/QPMS__Adverse_Events_or_Product_Problem__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Adverse_10_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <description>10-Day</description>
        <inlineHelpText>10-Day</inlineHelpText>
        <label>10-Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Adverse_30_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <description>30-Day</description>
        <inlineHelpText>30-Day</inlineHelpText>
        <label>30-Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Adverse_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adverse Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Canadian__c</fullName>
        <description>Canadian</description>
        <inlineHelpText>Canadian</inlineHelpText>
        <label>Canadian</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Congenital_Anomaly_Birth_Defects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Congenital Anomaly/Birth Defects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_Event__c</fullName>
        <label>B3. Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_Incident__c</fullName>
        <description>Date of Incident (dd-mmm-yyyy)</description>
        <inlineHelpText>Date of Incident (dd-mmm-yyyy)</inlineHelpText>
        <label>Date of Incident (dd-mmm-yyyy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_this_Report__c</fullName>
        <label>B4. Date of this Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Death_Date__c</fullName>
        <label>Death Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Describe_Event_or_Problem__c</fullName>
        <label>B5. Describe Event or Problem:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Details_of_Incident__c</fullName>
        <description>Details of Incident</description>
        <inlineHelpText>Details of Incident</inlineHelpText>
        <label>Details of Incident</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Disability_or_Permanant_Damage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability or Permanant Damage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <formula>TEXT(QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c)</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Foreign__c</fullName>
        <description>Foreign</description>
        <inlineHelpText>Foreign</inlineHelpText>
        <label>Foreign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Hospitalization_initial_or_prolonged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hospitalization-initial or prolonged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Investigational_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Investigational testing</description>
        <inlineHelpText>Investigational testing</inlineHelpText>
        <label>Investigational testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Life_Threatening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life-Threatening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Other_Relevant_History__c</fullName>
        <label>B7. Other Relevant History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Other_Serious_Important_Medical_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Serious (Important Medical Events)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Patient_Consequences__c</fullName>
        <description>Patient Consequences</description>
        <inlineHelpText>Patient Consequences</inlineHelpText>
        <label>Patient Consequences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Problem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Radiation_emitting_device_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Radiation emitting device (if applicable)</description>
        <inlineHelpText>Radiation emitting device (if applicable)</inlineHelpText>
        <label>Radiation emitting device(if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds the value Regulatory Report</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Adverse Events or Product Problem</relationshipLabel>
        <relationshipName>Adverse_Events_or_Product_Problem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Relevant_Tests_Laboratory_Data__c</fullName>
        <label>B6. Relevant Tests/Laboratory Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reporter_s_Awareness_Date__c</fullName>
        <description>Reporter’s Awareness Date</description>
        <inlineHelpText>Reporter’s Awareness Date</inlineHelpText>
        <label>Reporter’s Awareness Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Required_Intervention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Intervention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Special_Access_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special Access Program</description>
        <inlineHelpText>Special Access Program</inlineHelpText>
        <label>Special Access Program</label>
        <type>Checkbox</type>
    </fields>
    <label>Adverse Events or Product Problem</label>
    <nameField>
        <label>Adverse Events or Product Problem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adverse Events or Product Problem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>